--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vform": "^1.0.1",
         "vue-router": "^3.3.2",
         "vue-the-mask": "^0.11.1",
+        "vue2-dropzone": "^3.6.0",
         "vuetify": "^2.2.30",
         "vuex": "^3.4.0"
     }
