--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "@fortawesome/fontawesome-free": "^5.13.0",
         "@mdi/font": "^5.1.45",
         "admin-lte": "^3.0.2",
+        "dropzone": "^5.7.1",
+        "idle-vue": "^2.0.5",
         "moment": "^2.25.3",
         "sweetalert2": "^9.13.4",
         "toastr": "^2.1.4",
@@ -34,6 +36,7 @@
         "vue-the-mask": "^0.11.1",
         "vue2-dropzone": "^3.6.0",
         "vuetify": "^2.2.30",
-        "vuex": "^3.4.0"
+        "vuex": "^3.4.0",
+        "vuex-persistedstate": "^3.0.1"
     }
 }
